--- a/src/view/Cargo.toml
+++ b/src/view/Cargo.toml
@@ -7,8 +7,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ggez = "0.5.1"
-rand = "0.7"
-mint = "0.5"
-cgmath = { version = "0.17", features = ["mint"]}
+ggez = { git = "https://github.com/ggez/ggez" }
+rand = "*"
+mint = "*"
+glam = "*"
+cgmath = { version = "*", features = ["mint"]}
 logic = { path = "../logic" }
